--- a/style.css
+++ b/style.css
@@ -62,9 +62,10 @@
     top: 37.5vw;
     left: -2vw;
     animation-name: kvinde;
-    animation-duration: 10s;
-    animation-iteration-count: 5;
+    animation-duration: 2.86s;
+    animation-iteration-count: infinite;
     animation-timing-function: linear;
+    animation-delay: 0s;
 
 
 }
@@ -88,15 +89,32 @@
 
 
 
+
+
 @keyframes kvinde {
-    20% {
-        left: -2vw;
+    0% {
+        left: 0px;
+
     }
-    40% {
-        left: 100vw;
+
+    25% {
+        left: 47px;
+
     }
+
+    50% {
+        left: 119px;
+
+    }
+
+    75% {
+        left: 47px;
+
+    }
+
     100% {
-        left: 100vw;
+        left: 0px;
+
     }
 }
 
@@ -127,7 +145,7 @@
     43% {
         animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
         animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-        -webkit-transform: translate3d(0, -30px, 0);
+        transform: translate3d(0, -30px, 0);
         transform: translate3d(0, -30px, 0);
     }
 
