--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
     background-image: url(Forgrund_Tegnebr%C3%A6t%201.png);
     background-size: 100%;
     position: absolute;
-    top: 0;
+    top: 0vw;
 
 }
 
