--- a/style.css
+++ b/style.css
@@ -100,9 +100,9 @@
 
 #mand_sprite {
 
-    background-image: url(Mand-01.png);
+    background-image: url(Test_Tegnebr%C3%A6t%201.svg);
     background-size: 100%;
-    width: 40vw;
+    width: 120vw;
     height: 20vw;
 }
 
