--- a/style.css
+++ b/style.css
@@ -118,7 +118,6 @@
 
 
 
-
 #mand_container {
     position: absolute;
     bottom: -11.6vw;
@@ -127,49 +126,44 @@
 
 }
 
-#mand_sprite {
-    background-image: url(Spritesheet%20mand%20uden%20farve_Tegnebr%C3%A6t%201.svg);
-    background-size: 800% 100%;
-    width: 30vw;
-    height: 42.86vw;
-}
 
 .mand_move {
     animation-name: mand_move_kf;
-    animation-duration: 7s;
-    animation-iteration-count: infinite;
+    animation-duration: 6s;
+    animation-iteration-count: 1;
     animation-timing-function: linear;
+    animation-delay: 0;
 
 }
 
 @keyframes mand_move_kf {
     0% {
-        right: 0vw;
+        left: -20vw;
     }
-
-    25% {
-        right: 10vw;
-    }
-
     50% {
-        right: 20vw;
+        left: 0vw;
     }
-
-    75% {
-        right: 10vw;
+    80% {
+        left: 15vw;
     }
-
     100% {
-        right: 0vw;
+        left: 30vw;
     }
+}
 
+#mand_sprite_1 {
+    background-image: url(Spritesheet%20mand%20uden%20farve_Tegnebr%C3%A6t%201.svg);
+    background-size: 800% 100%;
+    width: 30vw;
+    height: 42.86vw;
+    transform: scale(-1, 1)
 }
 
 
 .mand_gaer {
     animation-name: mand_gaer_kf;
     animation-duration: 1s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 6;
     animation-timing-function: steps(8);
 
 
@@ -182,4 +176,20 @@
     100% {
         background-position: 800% 0%;
     }
+}
+
+#mand_sprite_2 {
+    position: absolute;
+    bottom: 5.6vw;
+    left: 5vw;
+    z-index: 4;
+}
+
+
+.mand_staer {
+    background-image: url(Mand%20350x500-01.svg);
+    background-size: 100%;
+    width: 20vw;
+    height: 30vw;
+    transform: scale(0.8)
 }
