--- a/style.css
+++ b/style.css
@@ -49,9 +49,6 @@
 
 }
 
-
-
-
 #kvinde_container {
     position: absolute;
     bottom: -14.3vw;
@@ -100,14 +97,14 @@
 
 }
 
-.kvinde_gaer {
-    animation-name: kvinde_gaer_kf;
+.kvinde_gaar {
+    animation-name: kvinde_gaar_kf;
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-timing-function: steps(8);
 }
 
-@keyframes kvinde_gaer_kf {
+@keyframes kvinde_gaar_kf {
     0% {
         background-position: 0 0%;
     }
@@ -115,6 +112,17 @@
         background-position: 800% 0%;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -151,24 +159,24 @@
     }
 }
 
-#mand_sprite_1 {
-    background-image: url(Spritesheet%20mand%20uden%20farve_Tegnebr%C3%A6t%201.svg);
-    background-size: 800% 100%;
+#mand_sprite {
+    background-image: url(Spritesheet%20mand_Tegnebr%C3%A6t%201.svg);
+    background-size: 800% 200%;
     width: 30vw;
     height: 42.86vw;
 
 }
 
 
-.mand_gaer {
-    animation-name: mand_gaer_kf;
+.mand_gaar {
+    animation-name: mand_gaar_kf;
     animation-duration: 1s;
     animation-iteration-count: 6;
     animation-timing-function: steps(8);
     transform: scale(-1, 1)
 }
 
-@keyframes mand_gaer_kf {
+@keyframes mand_gaar_kf {
     0% {
         background-position: 0 0%;
     }
@@ -177,18 +185,91 @@
     }
 }
 
-/*#mand_sprite_1 {
-    position: absolute;
-    bottom: 5.6vw;
-    left: 5vw;
-    z-index: 4;
-}*/
 
-.mand_staer {
-    background-image: url(Mand%20350x500-01.svg);
-    background-size: 100%;
-    width: 20vw;
-    height: 30vw;
+
+.mand_staar {
+    animation-name: mand_staar_kf;
+    animation-iteration-count: infinite;
+    animation-timing-function: steps(1);
+    animation-duration: 1s;
+    transform: scaleX(-1, 1)
 }
 
-.mand_gaer_venstre
+@keyframes mand_staar_kf {
+    0% {
+        left: 30vw;
+    }
+    100% {
+        left: 30vw;
+    }
+}
+
+
+
+.mand_gaar_venstre {
+    animation-name: mand_gaar_venstre_kf;
+    animation-duration: 1s;
+    animation-iteration-count: 6;
+    animation-timing-function: steps(8);
+}
+
+@keyframes mand_gaar_venstre_kf {
+    0% {
+        background-position: 800% 0%;
+    }
+    100% {
+        background-position: 0% 0%;
+    }
+}
+
+.mand_move_venstre {
+    animation-name: mand_move_venstre_kf;
+    animation-duration: 6s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+    animation-delay: 0;
+
+}
+
+@keyframes mand_move_venstre_kf {
+    0% {
+        left: 30vw;
+    }
+    100% {
+        left: 15vw;
+    }
+
+}
+
+.mand_staar_venstre {
+    animation-name: mand_staar_venstre_kf;
+    animation-iteration-count: infinite;
+    animation-timing-function: steps(1);
+    animation-duration: 1s;
+    transform: scaleX(-1, 1)
+}
+
+@keyframes mand_staar_venstre_kf {
+    0% {
+        left: 15vw;
+    }
+    100% {
+        left: 15vw;
+    }
+}
+
+.mand_staar_venstre_sprite {
+    animation-name: mand_staar_venstre_kf;
+    animation-duration: 1s;
+    animation-iteration-count: 6;
+    animation-timing-function: steps(1);
+}
+
+@keyframes mand_staar_venstre_kf {
+    0% {
+        background-position: -100% 0%;
+    }
+    100% {
+        background-position: 0% 0%;
+    }
+}
