--- a/style.css
+++ b/style.css
@@ -259,17 +259,17 @@
 }
 
 .mand_staar_venstre_sprite {
-    animation-name: mand_staar_venstre_kf;
-    animation-duration: 1s;
-    animation-iteration-count: 6;
+    animation-name: mand_staar_venstre_sprite_kf;
+    animation-duration: infinite;
+    animation-iteration-count: 1;
     animation-timing-function: steps(1);
 }
 
-@keyframes mand_staar_venstre_kf {
+@keyframes mand_staar_venstre_sprite_kf {
     0% {
-        background-position: -100% 0%;
+        background-position: 0% -100%;
     }
     100% {
-        background-position: 0% 0%;
+        background-position: 0% -100%;
     }
 }
